fixed project manager dashboard issue

--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -5,10 +5,14 @@
     <div class="row no-gutters">
         <div class="col-md-12">
             <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">{% if request.user.is_superuser %}
-                    <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
-                    {% else %}<li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a></li>
-                    {% endif %}<li class="breadcrumb-item active" aria-current="page">{{ object }}</li>
+                <ol class="breadcrumb">
+                    {% if request.user.is_superuser %}
+                        <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
+                    {% else %}
+                        <li class="breadcrumb-item"><a
+                                href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a></li>
+                    {% endif %}
+                    <li class="breadcrumb-item active" aria-current="page">{{ object }}</li>
                 </ol>
             </nav>
         </div>
@@ -16,15 +20,15 @@
             <div class="module-school-list">
                 <div class="school-wrap">
                     <ul class="school-list">
-                            {% for site in project.sites.all %}
-                                <li>
-                                    <a href="{% url 'core:site_detail' site.pk %}" title="">
-                                        <img src="assets/img/img-school.png" class="school-logo" alt="">
-                                        <h6>{{ site }}</h6>
-                                        <span>{{ site.address }}</span>
-                                    </a>
-                                </li>
-                            {% endfor %}
+                        {% for site in project.sites.all %}
+                            <li>
+                                <a href="{% url 'core:site_detail' site.pk %}" title="">
+                                    <img src="assets/img/img-school.png" class="school-logo" alt="">
+                                    <h6>{{ site }}</h6>
+                                    <span>{{ site.address }}</span>
+                                </a>
+                            </li>
+                        {% endfor %}
                     </ul>
                 </div>
             </div>
@@ -35,7 +39,7 @@
                     <div class="col-md-6">
                         <div class="widget-info margin-top-large">
                             <div class="widget-head">
-                                <a href="{% url 'core:project_update' project.pk%}"><h4>Edit Project</h4></a>
+                                <a href="{% url 'core:project_update' project.pk %}"><h4>Edit Project</h4></a>
                                 <h4>Project Details</h4>
                             </div>
                             <div class="widget-head">
@@ -108,9 +112,9 @@
                             <div class="widget-head">
                                 <h4>Materials</h4>
                                 {% if if_material %}
-                                        <a href="{% url 'core:material_list' project.pk %}" title=""
-                                           class="btn btn-sm btn-xs btn-primary"><i
-                                                class="la la-caret-right"></i> More</a>
+                                    <a href="{% url 'core:material_list' project.pk %}" title=""
+                                       class="btn btn-sm btn-xs btn-primary"><i
+                                            class="la la-caret-right"></i> More</a>
 
                                 {% endif %}
                                 <a href="{% url 'core:material_create' project.pk %}">Create New</a>
@@ -124,7 +128,8 @@
                                                 <a title="View submission detail"
                                                    href="{% url 'core:material_detail' obj.0 %}"><strong>{{ obj.1 }}</strong></a>
                                                 <br>
-                                                <a href="{% url 'core:category_update' obj.2 %}" title="View details of user">
+                                                <a href="{% url 'core:category_update' obj.2 %}"
+                                                   title="View details of user">
                                                     <small><i class="la la-user"></i>{{ obj.3 }}</small>
                                                 </a>
                                             </li>{% else %}<p>No Materials Found.</p>
@@ -138,11 +143,11 @@
                             <div class="widget-head">
                                 <h4>Manage User</h4>
                                 {% if if_material %}
-                                        <a href="{% url 'core:material_list' project.pk %}" title=""
-                                           class="btn btn-sm btn-xs btn-primary"><i
-                                                class="la la-caret-right"></i> More</a>
+                                    <a href="{% url 'core:material_list' project.pk %}" title=""
+                                       class="btn btn-sm btn-xs btn-primary"><i
+                                            class="la la-caret-right"></i> More</a>
                                 {% endif %}
-                            <a href="{% url 'core:user_create' %}">Create User</a>
+                                <a href="{% url 'core:user_create' %}">Create User</a>
                             </div>
                             <div class="widget-body">
                                 <ul class="submission-list">
@@ -157,23 +162,23 @@
                             <div class="widget-head">
                                 <h4>Category</h4>
                                 {% if if_category %}
-                                        <a href="{% url 'core:category_list' project.pk %}" title=""
-                                           class="btn btn-sm btn-xs btn-primary"><i
-                                                class="la la-caret-right"></i> More</a>
+                                    <a href="{% url 'core:category_list' project.pk %}" title=""
+                                       class="btn btn-sm btn-xs btn-primary"><i
+                                            class="la la-caret-right"></i> More</a>
                                 {% endif %}
-                            <a href="{% url 'core:category_create' project.pk %}">Create New</a>
+                                <a href="{% url 'core:category_create' project.pk %}">Create New</a>
                             </div>
                             <div class="widget-body">
                                 <ul class="submission-list">
-                                {% if if_category %}
-                                    {% for obj in category_list %}
+                                    {% if if_category %}
+                                        {% for obj in category_list %}
                                             <li>
                                                 <a href="{% url 'core:category_update' obj.0 %}"><strong>{{ obj.1 }}</strong></a>
                                             </li>
-                                    {% endfor %}
-                                {% else %}
-                                    <p>No Categories Found.</p>
-                                {% endif %}
+                                        {% endfor %}
+                                    {% else %}
+                                        <p>No Categories Found.</p>
+                                    {% endif %}
                                 </ul>
                             </div>
                         </div>
