project user list

--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -138,7 +138,7 @@
                             <div class="widget-head">
                                 <h4>Manage User</h4>
                                 {% if if_material %}
-                                        <a href="{% url 'core:material_list' project.pk %}" title=""
+                                        <a href="{% url 'userrole:project_user_list' project_id %}" title=""
                                            class="btn btn-sm btn-xs btn-primary"><i
                                                 class="la la-caret-right"></i> More</a>
                                 {% endif %}
