--- a/survey/core/templates/core/report_detail.html
+++ b/survey/core/templates/core/report_detail.html
@@ -1,5 +1,36 @@
-{% extends 'base.html' %}
+{% extends '_base.html' %}
 
 {% block content %}
+    <div class="row no-gutters">
+        <div class="col-md-12">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">{% if request.user.is_superuser %}
+                    <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
+                    {% else %}<li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' %}">Dashboard</a></li>
+                    {% endif %}
+                    <li class="breadcrumb-item active" aria-current="page">Report Detail</li>
+                </ol>
+            </nav>
+        </div>
+        <div class="widget-body">
+                <ul class="submission-list">
+                    <li>
+                        <img src="assets/img/img-school.png" alt="">
+                     <strong>{{ report.checklist.text }}</strong>
+                        <br>
+                        <a href="#" title="View details of user">
+                            <small><i class="la la-user"></i>Created by: {{ report.user }}</small>
+                        </a>
+                        <small class="site_icon_float" style=""><i class="la la-clock-o"
+                                                                   aria-hidden="true"></i>{{ report.date }}
+                        </small><br>
+                     <small class="site_icon_float" style="">Step: {{ report.checklist.step}}</small><br>
+                     <small class="site_icon_float" style="">Comment: {{ report.comment}}</small><br>
+                    <small class="site_icon_float" style="">Photo: <img src="{{ MEDIA_URL }}{{ report.photo }}" class="report-photo" alt=""></small>
 
+                    </li>
+
+
+                </ul>
+            </div>
 {% endblock content %} 
