--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -15,6 +15,7 @@
                     <li class="breadcrumb-item active" aria-current="page">{{ object }}</li>
                 </ol>
             </nav>
+            </nav>
         </div>
         <div class="col-md-4 col-lg-3"><a href="{% url 'core:site_create' project.pk %}"><h5>Add New Site</h5></a>
             <div class="module-school-list">
