--- a/survey/core/templates/core/project_form.html
+++ b/survey/core/templates/core/project_form.html
@@ -6,8 +6,11 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">{% if request.user.is_superuser %}
                     <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
-                    {% else %}<li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a></li>
-                    {% endif %}<li class="breadcrumb-item active" aria-current="page">{{ object }}</li>
+                {% else %}
+                    <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a>
+                    </li>
+                {% endif %}
+                    <li class="breadcrumb-item active" aria-current="page">{% if projects %}New Project{% else %}Edit {{ project.name }}{% endif %}</li>
                 </ol>
             </nav>
         </div>
@@ -16,15 +19,16 @@
                 <div class="school-wrap">
                     <ul class="school-list">
                         {% if request.user.is_superuser %}
-                            {% for project in projects %}
-                                <li>
-                                    <a href="{% url 'core:project_detail' project.pk %}" title="">
-                                        <img src="{{ MEDIA_URL }}{{ project.logo }}" class="project-logo" alt="">
-                                        <h6>{{ project }}</h6>
-                                        <span>{{ project.address }}</span>
-                                    </a>
-                                </li>{% endfor %}
-                        {% else %}
+                            {% if projects %}
+                                {% for project in projects %}
+                                    <li>
+                                        <a href="{% url 'core:project_dashboard' project.pk %}" title="">
+                                            <img src="{{ MEDIA_URL }}{{ project.logo }}" class="project-logo" alt="">
+                                            <h6>{{ project }}</h6>
+                                            <span>{{ project.address }}</span>
+                                        </a>
+                                    </li>
+                                {% endfor %}{% elif project %}
                                 {% for site in project.sites.all %}
                                     <li>
                                         <a href="{% url 'core:site_detail' site.pk %}" title="">
@@ -32,7 +36,16 @@
                                             <h6>{{ site }}</h6>
                                             <span>{{ site.address }}</span>
                                         </a>
-                                    </li>{% endfor %}
+                                    </li>{% endfor %}{% endif %}
+                        {% else %}
+                            {% for site in project.sites.all %}
+                                <li>
+                                    <a href="{% url 'core:site_detail' site.pk %}" title="">
+                                        <img src="assets/img/img-school.png" class="school-logo" alt="">
+                                        <h6>{{ site }}</h6>
+                                        <span>{{ site.address }}</span>
+                                    </a>
+                                </li>{% endfor %}
                         {% endif %}
                     </ul>
                 </div>
