--- a/survey/templates/_base.html
+++ b/survey/templates/_base.html
@@ -99,7 +99,7 @@
 					</a>
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButtonUser">
 						<a class="dropdown-item" href="#"><i class="la la-user"></i> My Profile</a>
-						<a class="dropdown-item" href="#"><i class="la la-key"></i> Change Password</a>
+						<a class="dropdown-item" href="{% url 'password_change' %}"><i class="la la-key"></i> Change Password</a>
 						<a class="dropdown-item" href="{% url 'logout' %}"><i class="la la-sign-out"></i> Logout</a>
 					</div>
 				</li>
