--- a/survey/templates/registration/password_change_form.html
+++ b/survey/templates/registration/password_change_form.html
@@ -1,5 +1,13 @@
 {% extends '_base.html' %}
 {% block content %}
+    <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">{% if request.user.is_superuser %}
+                    <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
+                    {% else %}<li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+                    {% endif %}
+                    <li class="breadcrumb-item active" aria-current="page">Password Change</li>
+                </ol>
+    </nav>
     <form action="" method="post">{% csrf_token %}
         <p>Old password: {{ form.old_password }}</p>
         <p>New password: {{ form.new_password1 }}</p>
