--- a/survey/core/templates/core/category_list.html
+++ b/survey/core/templates/core/category_list.html
@@ -7,37 +7,12 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">{% if request.user.is_superuser %}
                     <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
-                    {% else %}<li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk%}">Dashboard</a></li>
-                    {% endif %}<li class="breadcrumb-item active" aria-current="page">{{ object }}</li>
+                    {% else %}<li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a></li>
+                    {% endif %}<li class="breadcrumb-item active" aria-current="page">Category List</li>
                 </ol>
             </nav>
         </div>
-        <div class="col-md-4 col-lg-3">
-            <div class="module-school-list">
-                <div class="school-wrap">
-                    <ul class="school-list">
-                        {% if request.user.is_superuser %}
-                            {% for project in projects %}
-                                <li>
-                                    <a href="{% url 'core:project_dashboard' project.pk %}" title="">
-                                        <img src="{{ MEDIA_URL }}{{ project.logo }}" class="project-logo" alt="">
-                                        <h6>{{ project }}</h6>
-                                        <span>{{ project.address }}</span>
-                                    </a>
-                                </li>{% endfor %}{% else %}
-                                {% for site in project.sites.all %}
-                                    <li>
-                                        <a href="{% url 'core:site_detail' site.pk %}" title="">
-                                            <img src="assets/img/img-school.png" class="school-logo" alt="">
-                                            <h6>{{ site }}</h6>
-                                            <span>{{ site.address }}</span>
-                                        </a>
-                                    </li>{% endfor %}
-                        {% endif %}
-                    </ul>
-                </div>
-            </div>
-        </div>
+
         <div class="col-md-8 col-lg-9">
             <div class="dash-left">
                 <div class="row">
@@ -47,16 +22,15 @@
                                 <h4><a href="#" title="">Category</a></h4>
                             </div>
                             <div class="widget-body">
-                                {% if if_category %}
                                     {% for category in category_list %}
                                         <a href="{% url 'core:category_update' category.pk %}"><h5>
                                             {{ category }}</h5></a><br>
+                                        {% empty %}
+                                         <p>Not Categories Found.</p>
                                     {% endfor %}
-                                {% else %}
-                                    <p>Not Categories Found.
-                                    </p>
-                                {% endif %}<br>
-                                <strong><a href="{% url 'core:category_create' project_id %}">Create
+
+                               <br>
+                                <strong><a href="{% url 'core:category_create' project.pk %}">Create
                                     New</a></strong>
                             </div>
                         </div>
