--- a/survey/userrole/templates/userrole/userrole_form.html
+++ b/survey/userrole/templates/userrole/userrole_form.html
@@ -9,35 +9,10 @@
                     <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
                     {% else %}<li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a></li>
                     {% endif %}
+                    <li class="breadcrumb-item"><a href="{% url 'core:site_detail' site.pk %}">{{ site }}</a></li>
                     <li class="breadcrumb-item active" aria-current="page">People</li>
                 </ol>
             </nav>
-        </div>
-        <div class="col-md-4 col-lg-3">
-            <div class="module-school-list">
-                <div class="school-wrap">
-                    <ul class="school-list">
-                        {% if request.user.is_superuser %}
-                            {% for project in projects %}
-                                <li>
-                                    <a href="{% url 'core:project_dashboard' project.pk %}" title="">
-                                        <img src="{{ MEDIA_URL }}{{ project.logo }}" class="project-logo" alt="">
-                                        <h6>{{ project }}</h6>
-                                        <span>{{ project.address }}</span>
-                                    </a>
-                                </li>{% endfor %}{% else %}
-                                {% for site in project.sites.all %}
-                                    <li>
-                                        <a href="{% url 'core:site_detail' site.pk %}" title="">
-                                            <img src="assets/img/img-school.png" class="school-logo" alt="">
-                                            <h6>{{ site }}</h6>
-                                            <span>{{ site.address }}</span>
-                                        </a>
-                                    </li>{% endfor %}
-                        {% endif %}
-                    </ul>
-                </div>
-            </div>
         </div>
         <div class="col-md-8 col-lg-9">
             <div class="dash-left">
