--- a/survey/core/templates/core/material_form.html
+++ b/survey/core/templates/core/material_form.html
@@ -39,9 +39,10 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-8 col-lg-9">
-            <div class="dash-left">
-                <div class="row">
+        <div class="d-flex justify-content-center">
+        <div class="col-md-2 col-lg-12">
+            <div class="dash-right">
+                <div class="widget-info margin-top-large">
                     <form method="post" enctype="multipart/form-data">{% csrf_token %}
                         {% for error in form.non_field_errors %}
                             <div class="form-group has-errors text-danger small">
@@ -52,7 +53,6 @@
                             <div class="form-group">
                                 {{ field.errors }}
                                 {{ field.label_tag }}
-                                {#                                <label for="exampleFormControlInput1">Email address</label>#}
                                 {{ field }}
                             </div>
                         {% endfor %}
@@ -62,6 +62,7 @@
                         </div>
                     </form>
                 </div>
+            </div>
             </div>
         </div>
     </div>
