--- a/survey/userrole/templates/userrole/userrole_form.html
+++ b/survey/userrole/templates/userrole/userrole_form.html
@@ -14,21 +14,20 @@
                 </ol>
             </nav>
         </div>
-        <div class="col-md-8 col-lg-9">
-            <div class="dash-left">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="widget-info margin-top-large">
+        </div>
+
+        <<div class="d-flex justify-content-center">
+        <div class="col-md-4 col-lg-7">
+            <div class="dash-right">
+                <div class="widget-info margin-top-large">
                            <form action="" method="post">{% csrf_token %}
                         {{ form.as_p }}
-                        <input type="submit">
+                        <input type="submit" class="btn btn-primary">
                     </form>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
 
 {% endblock content %}
 
