--- a/survey/core/templates/core/project_form.html
+++ b/survey/core/templates/core/project_form.html
@@ -14,23 +14,19 @@
                 </ol>
             </nav>
         </div>
+    </div>
 
-        <div class="col-md-8 col-lg-9">
-            <div class="dash-left">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="widget-info margin-top-large">
-                            <div class="widget-head">
+        <div class="d-flex justify-content-center">
+        <div class="col-md-4 col-lg-7">
+            <div class="dash-right">
+                <div class="widget-info margin-top-large">
                                 <form method="post" enctype="multipart/form-data">{% csrf_token %}
                                     {{ form.as_p }}
-                                    <input type="submit" value="Submit">
+                                    <input type="submit" class="btn btn-primary">
                                 </form>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
 
 {% endblock content %}
