--- a/survey/templates/registration/password_change_form.html
+++ b/survey/templates/registration/password_change_form.html
@@ -8,11 +8,16 @@
                     <li class="breadcrumb-item active" aria-current="page">Password Change</li>
                 </ol>
     </nav>
+     <div class="d-flex justify-content-center">
+        <div class="col-md-4 col-lg-6">
+            <div class="dash-right">
+                <div class="widget-info margin-top-large">
     <form action="" method="post">{% csrf_token %}
         <p>Old password: {{ form.old_password }}</p>
         <p>New password: {{ form.new_password1 }}</p>
         <p>New password confirmation: {{ form.new_password2 }}</p>
-    <input type="submit">
+    <input type="submit" class="btn btn-primary">
 
     </form>
+                </div></div></div></div>
 {% endblock content %}
