--- a/survey/userrole/templates/userrole/project_user_list.html
+++ b/survey/userrole/templates/userrole/project_user_list.html
@@ -54,8 +54,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-8 col-lg-9">
-            <div class="dash-left">
+        <div class="col-md-8 col-lg-5">
+            <div class="dash-right">
                 <div class="widget-info margin-top-large">
                     <div class="widget-head">
                         <h4><a href="#" title="">User List</a></h4>
@@ -63,6 +63,8 @@
                     <div class="widget-body">
                         {% for user in users %}
                             {{ forloop.counter }}.{{ user }}<br>
+                        {% empty %}
+                            No User Found.
                         {% endfor %}
                     </div>
                 </div>
