Location field added

--- a/survey/core/templates/core/dashboard.html
+++ b/survey/core/templates/core/dashboard.html
@@ -40,33 +40,13 @@
                                     <h4><a href="#" title="">Project Info</a></h4>
                                 </div>
                                 <div class="widget-body">
-                                    <h5>Name</h5><br>
+                                    <h5>Total Projects</h5><br>
                                      <p>
-                                         {{ latest_project.name }}
+                                         {{ total_projects }}
                                      </p><br>
-                                    <h5>Organization</h5><br>
+                                    <h5>Total Project Managers</h5><br>
                                      <p>
-                                         {{ latest_project.organization }}
-                                     </p><br>
-                                    <h5>Logo</h5><br>
-                                     <p>
-                                         <img src="{{ MEDIA_URL }}{{ latest_project.logo }}">
-                                     </p><br>
-                                    <h5>Type</h5><br>
-                                     <p>
-                                         {{ latest_project.address }}
-                                     </p><br>
-                                    <h5>Short Description</h5><br>
-                                     <p>
-                                         {{ latest_project.short_description }}
-                                     </p><br>
-                                    <h5>Phone</h5><br>
-                                     <p>
-                                         {{ latest_project.phone_number }}
-                                     </p><br>
-                                    <h5>Email Address</h5><br>
-                                     <p>
-                                         {{ latest_project.email_address }}
+                                         {{ total_project_managers }}
                                      </p><br>
                                 </div>
                             </div>
