--- a/survey/core/templates/core/site_create.html
+++ b/survey/core/templates/core/site_create.html
@@ -37,6 +37,7 @@
 
                             <div class="widget-head">
                                 <form method="post" enctype="multipart/form-data">{% csrf_token %}
+                                    {{ form.media }}
                                     {{ form.as_p }}
                                     <input type="submit" value="Submit">
 
