--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -61,12 +61,7 @@
 
                                     </li>
                                     <li>
-                                        <strong>Latitude: {{ object.latitude }}</strong>
-                                        <br>
-
-                                    </li>
-                                    <li>
-                                        <strong>Longitude: {{ object.longitude }}</strong>
+                                        <strong>Location:<br><small>Latitude: {{ object.location.0 }}<br> Longitude: {{object.location.1}}</bold></small></strong>
                                         <br>
 
                                     </li>
