--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -36,8 +36,8 @@
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="btnGroupDrop2">
                                     <a class="dropdown-item" href="{% url 'userrole:field_engineer_create' object.pk %}"><i class="la la-user"></i> People</a>
-                                    <a class="dropdown-item" href="{% url 'core:site_update' site.pk %}"><i class="la la-cog"></i> Edit</a>
-                                    <a class="dropdown-item" href="{% url 'core:site_delete' site.pk %}"><i class="la la-cog"></i> Delete</a>
+                                    <a class="dropdown-item" href="{% url 'core:site_update' object.pk %}"><i class="la la-cog"></i> Edit</a>
+                                    <a class="dropdown-item" href="{% url 'core:site_delete' object.pk %}"><i class="la la-cog"></i> Delete</a>
 
                                 </div>
                             </div>
@@ -123,28 +123,30 @@
                     <div class="col-md-4">
                         <div class="widget-info margin-top-large">
                             <div class="widget-head">
-                                <h4>Material List</h4>
-                                <a href="" title="" class="btn btn-sm btn-xs btn-primary" ><i
+                                <h4>Guidelines</h4>
+                                <a href="{% url 'core:site_material_list' site.pk %}" title="" class="btn btn-sm btn-xs btn-primary" ><i
                                         class="la la-caret-right"></i> More</a>
+
+
                             </div>
                             <div class="widget-body">
                                 <ul class="submission-list">
                                     {% for material in site_materials  %}
                                     <li>
                                         <img src="assets/img/img-school.png" alt="">
-                                        <a title="View submission detail" href="{% url 'core:material_detail' material.pk %}"><strong>material</strong></a>
+                                        <a title="View guideline detail" href="{% url 'core:site_material_detail' material.pk %}"><strong>{{ material }}</strong></a>
                                         <br>
 
                                     </li>
                                    {% empty %}
-                                        No Materials Found.
+                                        No Guidelines Found.
 
                                    {% endfor %}
 
                                 </ul>
                             </div>
-                             <a href="{% url 'core:material_create' project_id %}" title="" class="btn btn-sm btn-xs btn-primary"><i
-                                        class="la la-caret-right"></i> Add Material</a>
+                             <a href="{% url 'core:site_material_create' site.pk %}" title="" class="btn btn-sm btn-xs btn-primary"><i
+                                        class="la la-caret-right"></i> Add Guidelines</a>
                         </div>
                     </div>
 
@@ -152,7 +154,7 @@
                         <div class="widget-info margin-top-large">
                             <div class="widget-head">
                                 <h4>Reports</h4>
-                                <a href="{% url 'core:report_list' object.pk %}" title="" class="btn btn-sm btn-xs btn-primary"><i
+                                <a href="{% url 'core:report_list' site.pk %}" title="" class="btn btn-sm btn-xs btn-primary"><i
                                         class="la la-caret-right"></i> More</a>
                             </div>
                             <div class="widget-body">
