--- a/survey/core/templates/core/sitematerials_confirm_delete.html
+++ b/survey/core/templates/core/sitematerials_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends '_base.html' %}
 {% block content %}
 <form action="" method="post">{% csrf_token %}
-    {{ form.as_p }}
+    <p>Are you sure want to delete {{ object }} ?</p>
     <input type="submit">
 </form>
 {% endblock content %}
