--- a/survey/userrole/templates/userrole/userrole_form.html
+++ b/survey/userrole/templates/userrole/userrole_form.html
@@ -7,16 +7,15 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">{% if request.user.is_superuser %}
                     <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
-                    {% else %}<li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a></li>
+
                     {% endif %}
-                    <li class="breadcrumb-item"><a href="{% url 'core:site_detail' site.pk %}">{{ site }}</a></li>
                     <li class="breadcrumb-item active" aria-current="page">People</li>
                 </ol>
             </nav>
         </div>
         </div>
 
-        <<div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center">
         <div class="col-md-4 col-lg-7">
             <div class="dash-right">
                 <div class="widget-info margin-top-large">
